gregs-page.css
header {
	width: 100%;
	position: fixed;
	border: 1px solid lightgrey;
	background-color: lightgrey;
	top: 0;
	left: 0;
}

.nav-links {
	display: inline-block;
	font-size: 18pt;
	padding-left: 980px;
}

.link {
	padding-right: 16px
}

.logo {
	display: inline-block;
	color: black;
	padding-left: 15px;
}

.logo h1 {
	font-size: 18pt;
}

a {
	text-decoration: none;
	color: rebeccapurple;
}

a:hover {
	text-decoration: underline;
}

.search-section input {
	margin-top: 120px;
	font-size: 17px;
	width: 400px;
	line-height: 30px;
	height: 30px;
	border: 1px solid lightgrey;
	display: inline;
	padding-right: 5px;
	padding-left: 8px;
	border-radius: 3px;
}

.search-section .image {
	width: 30px;
}

.search-section .search-box {
	margin-left: 100px;
	width: 600px;
}

.nav-pages {
	font-size: 17pt;
	margin-top: 70px;
	margin-left: 100px;
	width: 400px;
	display: inline-block;
	font-size: 0;
}

.prev-next {
	border: 1px solid lightgrey;
	padding: 6px 17px 6px 17px;
	font-size: 17pt;
}

.prev-next .prev {
	border-top-left-radius: 3px;
	border-bottom-left-radius: 3px;
}

.prev-next .next {
	border-bottom-right-radius: 3px;
	border-top-right-radius: 3px;
}

.pages-display {
	border: 1px solid lightgrey;
	padding: 6px 24px 6px 24px;
	font-size: 17pt;

}

